[gd_scene load_steps=2 format=3 uid="uid://boss_health_ui"]

[ext_resource type="Script" path="res://scripts/ui/boss_health_ui.gd" id="1_ui"]

[node name="BossHealthUI" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 100.0
grow_horizontal = 2
script = ExtResource("1_ui")

[node name="BossName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 5.0
offset_right = 150.0
offset_bottom = 25.0
grow_horizontal = 2
text = "BOSS NAME"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 25.0
offset_right = -100.0
grow_horizontal = 2
grow_vertical = 2
value = 200.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
text = "200 / 200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PhaseLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = 5.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 0
text = ""
horizontal_alignment = 1